add route invoice and fix swagger endpoint
