# app/models/invoiceModel.go
@@ -5,13 +5,23 @@ import (
 )
 
 type Invoice struct {
-	ID              uint      `gorm:"primaryKey" json:"id"`
-	OrderID         uint      `json:"order_id"`
-	TransactionID   string    `json:"transaction_id"`
-	TransactionDate time.Time `json:"transaction_date"`
-	CreatedAt       time.Time `json:"created_at"`
-	UpdatedAt       time.Time `json:"updated_at"`
+	ID            uint      `gorm:"primaryKey" json:"id"`
+	OrderID       uint      `json:"order_id"`
+	TransactionID uint      `json:"transaction_id"`
+	CreatedAt     time.Time `json:"created_at"`
+	UpdatedAt     time.Time `json:"updated_at"`
 
-	Order       Order       `json:"-"`
-	Transaction Transaction `json:"-"`
+	Order       Order       `json:"-" gorm:"foreignKey:OrderID"`
+	Transaction Transaction `json:"-" gorm:"foreignKey:TransactionID"`
+}
+
+type InvoiceDetail struct {
+	ID            uint      `json:"id"`
+	OrderID       uint      `json:"order_id"`
+	TransactionID uint      `json:"transaction_id"`
+	CreatedAt     time.Time `json:"created_at"`
+	UpdatedAt     time.Time `json:"updated_at"`
+
+	Order       OrderDetail       `json:"order"`
+	Transaction TransactionDetail `json:"transaction"`
 }
